Sprites alignment fixes

--- a/themes/bootstrap/css/bugitor.css
+++ b/themes/bootstrap/css/bugitor.css
@@ -865,109 +865,109 @@ h4 {
 /* line 56, ../scss/partials/_sprites.scss */
 .projects-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -507px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -511px no-repeat;
 }
 
 /* line 60, ../scss/partials/_sprites.scss */
 .activity-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1883px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1887px no-repeat;
 }
 
 /* line 64, ../scss/partials/_sprites.scss */
 .overview-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1979px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1983px no-repeat;
 }
 
 /* line 68, ../scss/partials/_sprites.scss */
 .issues-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1500px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1503px no-repeat;
 }
 
 /* line 72, ../scss/partials/_sprites.scss */
 .code-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1467px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1471px no-repeat;
 }
 
 /* line 76, ../scss/partials/_sprites.scss */
 .settings-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1179px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1183px no-repeat;
 }
 
 /* line 80, ../scss/partials/_sprites.scss */
 .roadmap-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1340px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1343px no-repeat;
 }
 
 /* line 84, ../scss/partials/_sprites.scss */
 .members-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1724px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1727px no-repeat;
 }
 
 /* line 88, ../scss/partials/_sprites.scss */
 .Bug-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -570px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -575px no-repeat;
 }
 
 /* line 92, ../scss/partials/_sprites.scss */
 .Feature-icon {
   padding-left: 20px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -890px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -895px no-repeat;
 }
 
 /* line 96, ../scss/partials/_sprites.scss */
 dt.issue-attachment {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -406px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -413px no-repeat;
 }
 
 /* line 101, ../scss/partials/_sprites.scss */
 dt.changeset {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1462px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1469px no-repeat;
 }
 
 /* line 106, ../scss/partials/_sprites.scss */
 dt.issue-new {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1494px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1501px no-repeat;
 }
 
 /* line 111, ../scss/partials/_sprites.scss */
 dt.issue-change {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -694px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -701px no-repeat;
 }
 
 /* line 116, ../scss/partials/_sprites.scss */
 dt.issue-note {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -534px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -541px no-repeat;
 }
 
 /* line 121, ../scss/partials/_sprites.scss */
 dt.issue-resolved {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -1142px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -1149px no-repeat;
 }
 
 /* line 126, ../scss/partials/_sprites.scss */
 dt.issue-rejected {
   padding-left: 17px;
-  background: url('../images/icons-s48247ce2e2.png') 0 -758px no-repeat;
+  background: url('../images/icons-s48247ce2e2.png') 0 -765px no-repeat;
 }
 
 /* line 131, ../scss/partials/_sprites.scss */
 .big-icon-projects {
   padding-left: 24px;
-  background: url('../images/twentytwo-sdb7a3e63f4.png') 0 2px no-repeat;
+  background: url('../images/twentytwo-sdb7a3e63f4.png') 0 3px no-repeat;
 }
 
 /* FULL WIDTH TABLE (used in Source and Overview) */
@@ -1641,7 +1641,7 @@ td.username img.gravatar {
 /* line 47, ../scss/partials/_gravatar.scss */
 #activity dt img.gravatar {
   position: relative;
-  top: 8px;
+  top: 1px;
 }
 
 /* line 1, ../scss/partials/_progress.scss */
