--- a/themes/bootstrap/scss/partials/_gravatar.scss
+++ b/themes/bootstrap/scss/partials/_gravatar.scss
@@ -46,5 +46,5 @@ td.username img.gravatar {
 
 #activity dt img.gravatar {
   position: relative;
-  top: 8px;
+  top: 1px;
 }
